# fps

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
SDL/: CMakeLists.txt  CombatSystem.cpp  CombatSystem.h  Config.h  Enemy.cpp  Enemy.h  Entity.h  Game.cpp  Game.h  Items.h  Menu.h  SDL2.cpp  SpawnSystem.cpp  SpawnSystem.h  Weapon.cpp  Weapon.h
SDL/tests/: enemies_tests.cpp  menu_tests.cpp  player_tests.cpp  weapon_tests.cpp
include/: Camera.h  Enemy.h  Game.h  Player.h  Vector3.h  Weapon.h
src/: Camera.cpp  Enemy.cpp  Game.cpp  Player.cpp  Weapon.cpp  main.cpp
